--- a/app/src/main/res/layout/fragment_odds_detail_live.xml
+++ b/app/src/main/res/layout/fragment_odds_detail_live.xml
@@ -61,7 +61,7 @@
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/rv_cat"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:background="@color/color_191919_FCFCFC"
