--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -15,6 +15,7 @@
         <item name="android:statusBarColor">@color/color_191919</item>
         <item name="android:windowLightStatusBar">false</item>
         <item name="android:overScrollMode">never</item>
+        <item name="android:windowBackground">@null</item>
     </style>
 
 
