--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -668,12 +668,11 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    app:hintText="@string/hint_verification_code"
                     app:iconSignifier="@drawable/ic_login_verify"
                     app:isResponsiveIconColor="false"
                     app:primaryColor="@color/color_AFAFB1"
-                    app:labelText="@string/verification_code"
-                    app:labelTextStyle="normal"
+                    app:singleText="@string/verification_code"
+                    app:singleTextStyle="normal"
                     app:hideSelectedTitle="true">
 
                     <org.cxct.sportlottery.widget.boundsEditText.ExtendedEditText
