--- a/app/src/main/res/layout/item_publicity_recommend.xml
+++ b/app/src/main/res/layout/item_publicity_recommend.xml
@@ -1,45 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
-    <LinearLayout
-        android:id="@+id/ll_content"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:visibility="gone">
-
-        <include
-            android:id="@+id/gameTypeView"
-            layout="@layout/publicity_game_type_view"
-            android:visibility="gone" />
-
-        <include
-            android:id="@+id/leagueView"
-            layout="@layout/publicity_league_view" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rvLeagueList"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:overScrollMode="never"
-            tools:itemCount="1"
-            tools:listitem="@layout/itemview_league_odd_v5" />
-
-        <View
-            android:id="@+id/SpaceItemDecorationView"
-            android:layout_width="match_parent"
-            android:layout_height="8dp"
-            android:background="@color/color_191919_FCFCFC" />
-
-    </LinearLayout>
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <include
-        android:id="@+id/loading"
-        layout="@layout/view_loading"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:id="@+id/gameTypeView"
+        layout="@layout/publicity_game_type_view"
+        android:visibility="gone" />
 
-</FrameLayout>
+    <include
+        android:id="@+id/leagueView"
+        layout="@layout/publicity_league_view" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvLeagueList"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:overScrollMode="never"
+        tools:itemCount="1"
+        tools:listitem="@layout/itemview_league_odd_v5" />
+
+    <View
+        android:id="@+id/SpaceItemDecorationView"
+        android:layout_width="match_parent"
+        android:layout_height="8dp"
+        android:background="@color/color_191919_FCFCFC" />
+
+</LinearLayout>
+
