--- a/app/src/main/res/layout/home_game_table_item_4.xml
+++ b/app/src/main/res/layout/home_game_table_item_4.xml
@@ -303,7 +303,7 @@
         android:id="@+id/iv_match_in_play"
         android:layout_width="14dp"
         android:layout_height="14dp"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="5dp"
         android:contentDescription="@null"
         android:scaleType="centerCrop"
         android:src="@drawable/ic_inplay_v4"
@@ -315,7 +315,8 @@
         android:id="@+id/iv_match_price"
         android:layout_width="19dp"
         android:layout_height="14dp"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="5dp"
+        android:paddingStart="5dp"
         android:paddingEnd="5dp"
         android:contentDescription="@null"
         android:scaleType="centerCrop"
@@ -332,7 +333,7 @@
         android:paddingTop="4dp"
         android:paddingBottom="4dp"
         android:paddingEnd="5dp"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="5dp"
         android:src="@drawable/ic_living_a3a3a3_666666"
         app:layout_constraintBottom_toBottomOf="@id/tv_match_play_type_count"
         app:layout_constraintStart_toEndOf="@id/iv_match_price"
