--- a/app/src/main/res/layout/item_number_keyboard_layout.xml
+++ b/app/src/main/res/layout/item_number_keyboard_layout.xml
@@ -2,13 +2,13 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="98dp"
+    android:layout_height="108dp"
     android:background="@color/color_060F20"
     android:orientation="vertical"
-    android:paddingStart="@dimen/margin_5"
-    android:paddingTop="@dimen/margin_8"
-    android:paddingEnd="@dimen/margin_5"
-    android:paddingBottom="@dimen/margin_8">
+    android:paddingStart="@dimen/margin_3"
+    android:paddingTop="@dimen/margin_3"
+    android:paddingEnd="@dimen/margin_3"
+    android:paddingBottom="@dimen/margin_3">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,16 +17,30 @@
         android:paddingVertical="@dimen/margin_3">
 
         <TextView
+            android:id="@+id/tvMax"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="@dimen/margin_3"
+            android:layout_marginEnd="@dimen/margin_3"
+            android:layout_weight="1"
+            android:background="@drawable/bg_radius_4_button_7c8288"
+            android:gravity="center"
+            android:text="@string/keyboard_max"
+            android:textColor="@color/white"
+            android:textSize="@dimen/textSize14sp" />
+
+
+        <TextView
             android:id="@+id/tvPlus1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginStart="@dimen/margin_3"
             android:layout_marginEnd="@dimen/margin_3"
             android:layout_weight="1"
-            android:background="@drawable/bg_radius_4_button_white"
+            android:background="@drawable/bg_radius_4_button_7c8288"
             android:gravity="center"
             android:text="+25"
-            android:textColor="@color/color_060F20"
+            android:textColor="@color/white"
             android:textSize="@dimen/textSize14sp"
             android:visibility="gone" />
 
@@ -37,10 +51,10 @@
             android:layout_marginStart="@dimen/margin_3"
             android:layout_marginEnd="@dimen/margin_3"
             android:layout_weight="1"
-            android:background="@drawable/bg_radius_4_button_white"
+            android:background="@drawable/bg_radius_4_button_7c8288"
             android:gravity="center"
             android:text="+50"
-            android:textColor="@color/color_060F20"
+            android:textColor="@color/white"
             android:textSize="@dimen/textSize14sp"
             android:visibility="gone" />
 
@@ -51,12 +65,25 @@
             android:layout_marginStart="@dimen/margin_3"
             android:layout_marginEnd="@dimen/margin_3"
             android:layout_weight="1"
-            android:background="@drawable/bg_radius_4_button_white"
+            android:background="@drawable/bg_radius_4_button_7c8288"
             android:gravity="center"
             android:text="+75"
-            android:textColor="@color/color_060F20"
+            android:textColor="@color/white"
             android:textSize="@dimen/textSize14sp"
             android:visibility="gone" />
+
+
+        <ImageView
+            android:id="@+id/tvClear"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="@dimen/margin_3"
+            android:layout_marginEnd="@dimen/margin_3"
+            android:layout_weight="1"
+            android:background="@drawable/bg_button_keyboard"
+            android:gravity="center"
+            android:padding="@dimen/margin_6"
+            android:src="@drawable/ic_clear" />
 
         <TextView
             android:id="@+id/tvPlus4"
@@ -88,10 +115,10 @@
             android:layout_marginStart="@dimen/margin_3"
             android:layout_marginEnd="@dimen/margin_3"
             android:layout_weight="1"
-            android:background="@drawable/bg_radius_4_button_7c7c7c"
             android:gravity="center"
             android:text="1"
-            android:textColor="@color/white"
+            android:background="@drawable/bg_radius_4_button_fffdfe"
+            android:textColor="@color/color_333333"
             android:textSize="@dimen/textSize14sp" />
 
         <TextView
@@ -101,10 +128,10 @@
             android:layout_marginStart="@dimen/margin_3"
             android:layout_marginEnd="@dimen/margin_3"
             android:layout_weight="1"
-            android:background="@drawable/bg_radius_4_button_7c7c7c"
+            android:background="@drawable/bg_radius_4_button_fffdfe"
+            android:textColor="@color/color_333333"
             android:gravity="center"
             android:text="2"
-            android:textColor="@color/white"
             android:textSize="@dimen/textSize14sp" />
 
         <TextView
@@ -114,10 +141,10 @@
             android:layout_marginStart="@dimen/margin_3"
             android:layout_marginEnd="@dimen/margin_3"
             android:layout_weight="1"
-            android:background="@drawable/bg_radius_4_button_7c7c7c"
+            android:background="@drawable/bg_radius_4_button_fffdfe"
+            android:textColor="@color/color_333333"
             android:gravity="center"
             android:text="3"
-            android:textColor="@color/white"
             android:textSize="@dimen/textSize14sp" />
 
         <TextView
@@ -127,10 +154,10 @@
             android:layout_marginStart="@dimen/margin_3"
             android:layout_marginEnd="@dimen/margin_3"
             android:layout_weight="1"
-            android:background="@drawable/bg_radius_4_button_7c7c7c"
+            android:background="@drawable/bg_radius_4_button_fffdfe"
+            android:textColor="@color/color_333333"
             android:gravity="center"
             android:text="4"
-            android:textColor="@color/white"
             android:textSize="@dimen/textSize14sp" />
 
         <TextView
@@ -140,10 +167,10 @@
             android:layout_marginStart="@dimen/margin_3"
             android:layout_marginEnd="@dimen/margin_3"
             android:layout_weight="1"
-            android:background="@drawable/bg_radius_4_button_7c7c7c"
+            android:background="@drawable/bg_radius_4_button_fffdfe"
+            android:textColor="@color/color_333333"
             android:gravity="center"
             android:text="5"
-            android:textColor="@color/white"
             android:textSize="@dimen/textSize14sp" />
 
         <TextView
@@ -153,50 +180,13 @@
             android:layout_marginStart="@dimen/margin_3"
             android:layout_marginEnd="@dimen/margin_3"
             android:layout_weight="1"
-            android:background="@drawable/bg_radius_4_button_7c7c7c"
+            android:background="@drawable/bg_radius_4_button_fffdfe"
+            android:textColor="@color/color_333333"
             android:gravity="center"
             android:text="6"
-            android:textColor="@color/white"
             android:textSize="@dimen/textSize14sp" />
 
-        <TextView
-            android:id="@+id/tvNum7"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginStart="@dimen/margin_3"
-            android:layout_marginEnd="@dimen/margin_3"
-            android:layout_weight="1"
-            android:background="@drawable/bg_radius_4_button_7c7c7c"
-            android:gravity="center"
-            android:text="7"
-            android:textColor="@color/white"
-            android:textSize="@dimen/textSize14sp" />
 
-        <TextView
-            android:id="@+id/tvNum8"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginStart="@dimen/margin_3"
-            android:layout_marginEnd="@dimen/margin_3"
-            android:layout_weight="1"
-            android:background="@drawable/bg_radius_4_button_7c7c7c"
-            android:gravity="center"
-            android:text="8"
-            android:textColor="@color/white"
-            android:textSize="@dimen/textSize14sp" />
-
-        <TextView
-            android:id="@+id/tvNum9"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginStart="@dimen/margin_3"
-            android:layout_marginEnd="@dimen/margin_3"
-            android:layout_weight="1"
-            android:background="@drawable/bg_radius_4_button_7c7c7c"
-            android:gravity="center"
-            android:text="9"
-            android:textColor="@color/white"
-            android:textSize="@dimen/textSize14sp" />
 
 
     </LinearLayout>
@@ -209,16 +199,58 @@
         android:paddingVertical="@dimen/margin_3">
 
         <TextView
+            android:id="@+id/tvNum7"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="@dimen/margin_3"
+            android:layout_marginEnd="@dimen/margin_3"
+            android:layout_weight="1"
+            android:background="@drawable/bg_radius_4_button_fffdfe"
+            android:textColor="@color/color_333333"
+            android:gravity="center"
+            android:text="7"
+            android:textSize="@dimen/textSize14sp" />
+
+        <TextView
+            android:id="@+id/tvNum8"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="@dimen/margin_3"
+            android:layout_marginEnd="@dimen/margin_3"
+            android:layout_weight="1"
+            android:background="@drawable/bg_radius_4_button_fffdfe"
+            android:textColor="@color/color_333333"
+            android:gravity="center"
+            android:text="8"
+            android:textSize="@dimen/textSize14sp" />
+
+        <TextView
+            android:id="@+id/tvNum9"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="@dimen/margin_3"
+            android:layout_marginEnd="@dimen/margin_3"
+            android:layout_weight="1"
+            android:background="@drawable/bg_radius_4_button_fffdfe"
+            android:gravity="center"
+            android:text="9"
+            android:textColor="@color/color_333333"
+            android:textSize="@dimen/textSize14sp" />
+
+
+
+
+        <TextView
             android:id="@+id/tvNum0"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginStart="@dimen/margin_3"
             android:layout_marginEnd="@dimen/margin_3"
             android:layout_weight="1"
-            android:background="@drawable/bg_radius_4_button_7c7c7c"
+            android:background="@drawable/bg_radius_4_button_fffdfe"
+            android:textColor="@color/color_333333"
             android:gravity="center"
             android:text="0"
-            android:textColor="@color/white"
             android:textSize="@dimen/textSize14sp" />
 
         <TextView
@@ -228,24 +260,13 @@
             android:layout_marginStart="@dimen/margin_3"
             android:layout_marginEnd="@dimen/margin_3"
             android:layout_weight="1"
-            android:background="@drawable/bg_radius_4_button_7c7c7c"
+            android:background="@drawable/bg_radius_4_button_fffdfe"
+            android:textColor="@color/color_333333"
             android:gravity="center"
             android:text="."
-            android:textColor="@color/white"
             android:textSize="@dimen/textSize14sp" />
 
-        <TextView
-            android:id="@+id/tvMax"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginStart="@dimen/margin_3"
-            android:layout_marginEnd="@dimen/margin_3"
-            android:layout_weight="1"
-            android:background="@drawable/bg_radius_4_button_7c7c7c"
-            android:gravity="center"
-            android:text="@string/keyboard_max"
-            android:textColor="@color/white"
-            android:textSize="@dimen/textSize14sp" />
+
 
         <ImageView
             android:id="@+id/tvDel"
@@ -254,7 +275,7 @@
             android:layout_marginStart="@dimen/margin_3"
             android:layout_marginEnd="@dimen/margin_3"
             android:layout_weight="1"
-            android:background="@drawable/bg_radius_4_button_7c7c7c"
+            android:background="@drawable/bg_button_keyboard"
             android:gravity="center"
             android:padding="@dimen/margin_6"
             android:src="@drawable/ic_delete" />
