--- a/app/src/main/res/layout/activity_profile_center.xml
+++ b/app/src/main/res/layout/activity_profile_center.xml
@@ -8,7 +8,13 @@
     android:orientation="vertical"
     tools:context=".ui.profileCenter.ProfileCenterActivity"
     tools:ignore="spUsage">
-
+    <include
+        layout="@layout/view_base_tool_bar_no_drawer"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:background="@drawable/bg_gray_gradient">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -16,25 +22,16 @@
         android:paddingStart="0dp"
         android:paddingEnd="20dp">
 
-        <ImageView
-            android:id="@+id/profile_center_back"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:paddingStart="20dp"
-            android:paddingEnd="10dp"
-            android:src="@drawable/ic_icon_arrow_blue"
-            app:layout_constraintBottom_toBottomOf="@id/iv_head"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@id/iv_head" />
-
         <com.makeramen.roundedimageview.RoundedImageView
             android:id="@+id/iv_head"
             android:layout_width="42dp"
             android:layout_height="42dp"
-            app:layout_goneMarginStart="20dp"
+            android:layout_marginLeft="@dimen/margin_30"
+            android:layout_marginRight="@dimen/margin_30"
+            android:layout_marginTop="@dimen/margin_20"
             android:scaleType="centerCrop"
             android:src="@drawable/img_avatar_default"
-            app:layout_constraintStart_toEndOf="@id/profile_center_back"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:riv_oval="true" />
 
@@ -96,111 +93,91 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <LinearLayout
-        android:id="@+id/block_amount"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="13dp"
-        android:background="@drawable/bg_gradient_blue"
-        android:gravity="center_vertical"
-        android:minHeight="35dp"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/label_account_balance"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
-            android:gravity="center_vertical"
-            android:text="@string/account_balance"
-            android:textColor="@color/color_FFFFFF_FFFFFF"
-            android:textSize="@dimen/textSize12sp" />
-
-        <TextView
-            android:id="@+id/tv_account_balance"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:gravity="center_vertical"
-            android:maxWidth="180dp"
-            android:textColor="@color/color_FFFFFF_FFFFFF"
-            android:textSize="@dimen/textSize20sp"
-            android:textStyle="bold"
-            app:autoSizeMaxTextSize="20dp"
-            app:autoSizeMinTextSize="2dp"
-            tools:text="87,547,000.000" />
-
-        <TextView
-            android:id="@+id/tv_currency_type"
+        <LinearLayout
+            android:id="@+id/block_amount"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="5dp"
-            android:layout_weight="1"
+            android:paddingHorizontal="@dimen/margin_20"
+            android:paddingTop="@dimen/margin_12"
+            android:paddingBottom="@dimen/margin_32"
+            android:layout_marginHorizontal="@dimen/margin_20"
+            android:layout_marginTop="@dimen/margin_16"
+            android:background="@drawable/bg_amount_yellow_gradient"
             android:gravity="center_vertical"
-            android:textColor="@color/color_FFFFFF_FFFFFF"
-            android:textSize="@dimen/textSize18sp"
-            android:textStyle="bold"
-            tools:text="PHP" />
+            android:minHeight="35dp"
+            android:orientation="horizontal">
 
-        <ImageButton
-            android:id="@+id/ivNotice"
-            android:layout_width="wrap_content"
-            android:layout_height="16dp"
-            android:background="@null"
-            android:contentDescription="@null"
-            android:padding="6dp"
-            android:src="@drawable/ic_info_white_inside"
-            android:visibility="gone"
-            app:tint="@color/color_FFFFFF_FFFFFF"
-            tools:visibility="visible" />
+            <TextView
+                android:id="@+id/tv_currency_type"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
 
-        <ImageButton
-            android:id="@+id/btn_refresh_money"
-            android:layout_width="wrap_content"
-            android:layout_height="35dp"
-            android:background="@null"
-            android:contentDescription="@null"
-            android:paddingStart="6dp"
-            android:paddingEnd="10dp"
-            android:src="@drawable/ic_profile_center_refresh" />
+                android:gravity="center_vertical"
+                android:textColor="@color/color_643C00"
+                android:textSize="@dimen/textSize18sp"
+                android:textStyle="bold"
+                tools:text="P" />
+            <TextView
+                android:id="@+id/tv_account_balance"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/margin_5"
+                android:gravity="center_vertical"
+                android:maxWidth="250dp"
+                android:textColor="@color/color_643C00"
+                android:textSize="@dimen/textSize20sp"
+                android:textStyle="bold"
+                app:autoSizeMaxTextSize="20dp"
+                app:autoSizeMinTextSize="2dp"
+                tools:text="87,547,000.000" />
 
-    </LinearLayout>
+            <ImageButton
+                android:id="@+id/ivNotice"
+                android:layout_width="wrap_content"
+                android:layout_height="16dp"
+                android:background="@null"
+                android:contentDescription="@null"
+                android:padding="6dp"
+                android:src="@drawable/ic_info_white_inside"
+                android:visibility="gone"
+                app:tint="@color/color_FFFFFF_FFFFFF"
+                tools:visibility="visible" />
+            <Space
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"/>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="8dp"
-        android:layout_marginBottom="4dp"
-        android:background="@color/color_141414_F3F4F5"
-        app:layout_constraintTop_toBottomOf="@id/block_amount" />
+            <ImageButton
+                android:id="@+id/btn_refresh_money"
+                android:layout_width="@dimen/margin_20"
+                android:layout_height="@dimen/margin_20"
+                android:padding="@dimen/margin_4"
+                android:background="@null"
+                android:contentDescription="@null"
+                android:scaleType="fitXY"
+                android:src="@drawable/ic_refresh_brown" />
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/block_card"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="8dp"
-        android:background="@color/color_191919_FCFCFC"
-        android:paddingHorizontal="16dp"
-        app:cardCornerRadius="6dp"
-        app:cardElevation="4dp"
-        app:layout_constraintTop_toBottomOf="@id/block_amount">
+        </LinearLayout>
+
+
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/color_191919_FCFCFC"
+            android:layout_height="wrap_content"
+            android:paddingHorizontal="16dp"
+            android:layout_marginTop="-20dp"
+            android:paddingTop="@dimen/margin_20"
+            android:background="@drawable/bg_white_wallet"
             android:gravity="center"
-            android:minHeight="60dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            app:layout_constraintTop_toBottomOf="@id/block_amount">
 
             <LinearLayout
                 android:id="@+id/btn_recharge"
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="@color/color_191919_FCFCFC"
+                android:paddingVertical="@dimen/margin_12"
                 android:elevation="5dp"
                 android:gravity="center"
                 android:orientation="horizontal">
@@ -223,15 +200,15 @@
 
             <View
                 android:layout_width="1dp"
-                android:layout_height="25dp"
+                android:layout_height="20dp"
                 android:background="@color/color_2B2B2B_e2e2e2" />
 
             <LinearLayout
                 android:id="@+id/btn_withdraw"
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="@color/color_191919_FCFCFC"
+                android:paddingVertical="@dimen/margin_12"
                 android:gravity="center"
                 android:orientation="horizontal">
 
@@ -252,9 +229,11 @@
             </LinearLayout>
 
         </LinearLayout>
-
-    </androidx.cardview.widget.CardView>
-
+    </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/margin_8"
+        android:background="@color/color_F3F4F5"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
