--- a/app/src/main/res/layout/fragment_bet_list.xml
+++ b/app/src/main/res/layout/fragment_bet_list.xml
@@ -119,7 +119,7 @@
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
-                <LinearLayout
+                <!--<LinearLayout
                     android:id="@+id/ll_delete_all"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -151,7 +151,7 @@
                         android:background="@color/color_2B2B2B_FCFCFC"
                         android:padding="16dp"
                         android:src="@drawable/ic_close_gray" />
-                </LinearLayout>
+                </LinearLayout>-->
             </FrameLayout>
 
             <!--<View
