--- a/app/src/main/res/layout/activity_switch_language.xml
+++ b/app/src/main/res/layout/activity_switch_language.xml
@@ -9,7 +9,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/margin_48"
-        android:background="@color/color_191919_FCFCFC"
+        android:background="@drawable/bg_title"
         android:gravity="center_vertical"
         android:orientation="horizontal"
         app:layout_scrollFlags="scroll|enterAlways"
